# PyQtDarkTheme

./: .pre-commit-config.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: code-checks.yml  release.yml  test.yml  update-icon.yml
docs/source/: conf.py
examples/toggle_theme/: toggle_with_pyqtgraph.py
qdarktheme/: __init__.py  _color.py  _main.py  _style_loader.py  _util.py
qdarktheme/_icon/: icon_engine.py
qdarktheme/_resources/: standard_icons.py
qdarktheme/_template/: engine.py  filter.py
qdarktheme/qtpy/: __init__.py  qt_compat.py  qt_version.py
qdarktheme/qtpy/QtCore/: __init__.py
qdarktheme/qtpy/QtGui/: __init__.py
qdarktheme/qtpy/QtSvg/: __init__.py
qdarktheme/qtpy/QtWidgets/: __init__.py
qdarktheme/widget_gallery/: __main__.py  main_window.py
qdarktheme/widget_gallery/_ui/: dock_ui.py  frame_ui.py  icons_ui.py  mdi_ui.py  widgets_ui.py
style/: palette.template.py
tests/: test_color.py  test_filters.py  test_qdarktheme.py  test_qdarktheme_with_qt.py  test_svg.py  test_template_engine.py  test_util.py  test_widget_gallery.py
tools/: capture.py  check_build_package.py
tools/build_styles/: _main.py
tools/build_theme_color_doc/: main.py
