[project]
name = "PyQtDarkTheme-fork"
version = "2.3.6"
description = "Flat dark theme for PySide and PyQt."
authors = [
    {name = "Yunosuke Ohsugi", email = "63651161+5yutan5@users.noreply.github.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8,<3.15"
keywords = ["qt", "stylesheets", "dark-theme"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Environment :: X11 Applications :: Qt",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "darkdetect>=0.7",
]

[project.urls]
Repository = "https://github.com/5yutan5/PyQtDarkTheme"
Homepage = "https://github.com/5yutan5/PyQtDarkTheme"
Documentation = "https://pyqtdarktheme.readthedocs.io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qdarktheme"]

[dependency-groups]
dev = [
    "black>=22.10.0",
    "isort>=5.10.1",
    "pre-commit>=3.5.0",
]
flake8 = [
    "docutils>=0.11,<0.21",
    "flake8>=5.0.4",
    "flake8-return>=1.1.3",
    "flake8-pie>=0.16.0",
    "flake8-print>=5.0.0",
    "flake8-docstrings>=1.6.0",
    "flake8-bugbear>=22.10.25",
    "flake8-simplify>=0.19.3",
    "flake8-comprehensions>=3.10.0",
    "flake8-eradicate>=1.4.0",
    "flake8-rst-docstrings>=0.2.7",
    "flake8-pyproject>=1.2.1",
    "flake8-pytest-style>=1.6.0",
    "pep8-naming>=0.13.2",
]
test = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pytest-randomly>=3.12.0",
    "pytest-qt>=4.2.0",
    "pytest-xvfb>=2.0.0",
    "pytest-mock>=3.10.0",
]
docs = [
    "Sphinx>=4.3.1,<6.0.0",
    "rstcheck[toml]>=6.1.0",
    "pydata-sphinx-theme>=0.11.0",
    "sphinx-design>=0.3.0",
    "sphinx-copybutton>=0.5.0",
]
github-actions = [
    "pytest-github-actions-annotate-failures>=0.1.7",
]

[tool.flake8]
max-line-length = 104
max-complexity = 7
docstring-convention = "google"
per-file-ignores = ["**/__init__.py:F401", "examples/**:D103,D100"]

# See https://github.com/peterjc/flake8-rst-docstrings#configuration
extend-ignore = ["RST201", "RST203", "RST301"]

[tool.black]
line-length = 104

[tool.isort]
profile = "black"
line_length = 104

[tool.pyright]
typeCheckingMode = "basic"
ignore = ["examples"]
