[project]
name = "PyQtDarkTheme-fork"
version = "2.3.6"
description = "Flat dark theme for PySide and PyQt."
authors = [
    {name = "Yunosuke Ohsugi", email = "63651161+5yutan5@users.noreply.github.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8,<3.15"
keywords = ["qt", "stylesheets", "dark-theme"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Environment :: X11 Applications :: Qt",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "darkdetect>=0.7",
]

[project.urls]
Repository = "https://github.com/5yutan5/PyQtDarkTheme"
Homepage = "https://github.com/5yutan5/PyQtDarkTheme"
Documentation = "https://pyqtdarktheme.readthedocs.io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qdarktheme"]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pre-commit>=3.5.0",
]
test = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pytest-randomly>=3.12.0",
    "pytest-qt>=4.2.0",
    "pytest-xvfb>=2.0.0",
    "pytest-mock>=3.10.0",
]
docs = [
    "Sphinx>=4.3.1,<6.0.0",
    "rstcheck[toml]>=6.1.0",
    "pydata-sphinx-theme>=0.11.0",
    "sphinx-design>=0.3.0",
    "sphinx-copybutton>=0.5.0",
]
github-actions = [
    "pytest-github-actions-annotate-failures>=0.1.7",
]

[tool.ruff]
line-length = 104

[tool.ruff.lint]
select = ["E", "W", "F", "B", "C4", "C90", "D", "ERA", "N", "PIE", "PT", "RET", "SIM", "T20"]
ignore = ["E231"]

[tool.ruff.lint.mccabe]
max-complexity = 7

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"examples/**" = ["D100", "D103"]


[tool.pyright]
typeCheckingMode = "basic"
ignore = ["examples"]
